# ferrux_engine

./: Cargo.toml  README.md
.github/workflows/: generate_plantuml.yml  rust.yml
doc/: class.puml  todos.md
src/: lib.rs  main.rs
src/actors/: actor.rs  environment.rs  example.rs  mesh_actor.rs  mod.rs
src/actors/examples/: bouncing_box.rs  cube_3d.rs  mod.rs  triangle_2d.rs
src/engine/: engine_camera.rs  engine_canvas.rs  engine_config.rs  engine_error.rs  engine_loop.rs  engine_renderer.rs  mod.rs  rust_3d_engine.rs  rust_engine.rs
src/environment/: environment.rs  error.rs  mod.rs
src/geometry/: geometry_error.rs  matrix4.rs  mesh.rs  mod.rs  point3.rs  projectable.rs  rotation.rs  triangle.rs  util.rs
src/geometry/triangle/: mod.rs  triangle2.rs  triangle3.rs  triangle_parsing_error.rs  triangle_shape.rs
src/geometry/vector/: mod.rs  ops.rs  point2.rs  point3.rs  point_parsing_error.rs  vector.rs
src/math/: matrix4.rs  mod.rs  vector_matrix_multiplication.rs
src/math/builders/: mod.rs  projection_matrix_builder.rs  rotation_matrix_builder.rs
