[package]
name = "ferrux_engine"
version = "0.1.0"
authors = ["Soto Estévez <ricardo@sotoestevez.dev>"]
edition = "2021"
readme = "README.md"

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.9"
ferrux_viewport = "0.1.1"
log = "0.4"
winit = "0.26"
winit_input_helper = "0.11"